Fix component overflow issue (same as last commit forgot to add)

--- a/frontend/src/components/common/navBar.css
+++ b/frontend/src/components/common/navBar.css
@@ -10,6 +10,7 @@
     min-height: 6vh;
     justify-content: space-between;
     padding: 0 36px;
+    height: 10vh;
     position: relative;
 }
 
